--- a/src/Components/Project-home.css
+++ b/src/Components/Project-home.css
@@ -1,11 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Open+Sans+Condensed:wght@300&family=Poppins:wght@200&family=Roboto:wght@500&family=Rowdies&display=swap");
 
-.outermost-project{
-    margin-bottom: 50px;
+.outermost-project {
+  margin-bottom: 50px;
 }
+
 .project-section {
   text-align: center;
 }
+
 .project-heading {
   font-family: "Rowdies", cursive;
   font-size: 2.5rem;
@@ -29,63 +31,67 @@
   flex-direction: row;
 }
 
-.link-active{
-    text-decoration: none;
-  }
+.link-active {
+  text-decoration: none;
+}
 
-.link-container{
-    display: flex;
-    flex-direction: row;
-    margin-top: 10px;
+.link-container {
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .p-container {
   text-align: center;
-  background-color: #6895A6;
-  z-index:2;
+  background-color: #0a1931;
+  z-index: 2;
   padding: 10px;
   margin: 10px;
   margin: auto;
   border: 2px solid;
-  width: 400px;
+  width: 30%;
   border-color: aliceblue;
-  border-radius:10px;
+  border-radius: 10px;
 }
 
-.projectline{
-    height: 3px;
-    background-color: white;
-    width: 40%;
-    margin: auto;
-    text-align:center;
+.projectline {
+  height: 2px;
+  background-color: white;
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  margin-top: 10px;
 }
 
-
-.left-link{
-    position: relative;
-    text-align: left;
-    width: 150px;
-    text-align: center;
+.left-link {
+  position: relative;
+  text-align: left;
+  width: 150px;
+  text-align: center;
 }
-.right-link{
-    position: relative;
-    text-align: right;
-    left:20px;
-    text-align: center;
-    margin: auto;
+.right-link {
+  position: relative;
+  text-align: right;
+  left: 20px;
+  text-align: center;
+  margin: auto;
 }
 .project-card-btn {
-text-decoration: none;
+  text-decoration: none;
   margin-left: auto;
   display: block;
+  /* padding-right:10px ; */
   font-size: 0.8rem;
   text-align: center;
-  color: #ff4322;
-  background-color: #6895A6;
+  color: #00a0ff;
+  font-weight: bold;
+  background-color: #0a1931;
   border: none;
   border-radius: 0.4rem;
   transition: 0.2s;
   cursor: pointer;
   letter-spacing: 0.1rem;
+  /* margin-right: 20px; */
 }
 .project-card-btn span {
   transition: 0.2s;
@@ -95,6 +101,21 @@ text-decoration: none;
   margin-left: 1rem;
 }
 
-.project-heading2{
-    font-size: 1.4rem;
+.project-heading2 {
+  font-size: 1.4rem;
+  color: #719fb0;
+  margin-top: 10px;
 }
+
+.project-description {
+  color: white;
+  padding: 10px 40px;
+}
+
+
+
+@media (max-width: 600px) {
+    .project-container {
+      flex-direction: column;
+    }
+  }
