--- a/src/Components/Achievements/Achievements.css
+++ b/src/Components/Achievements/Achievements.css
@@ -2,12 +2,19 @@
 
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background: #ffffff;
+  background: #1A374D;
 }
-.achievements {
+.achievements-heading {
+  /* padding: 50px; */
+  font-family: "Rowdies", cursive;
+  padding-top: 50px;
+  
   text-align: center;
-  font-style: bolder;
+  font-size: 3rem
+}
+.timeline .achievements{
+  font-family: "Rowdies", cursive;
+  font-size: 5rem;
 }
 .timeline {
   position: relative;
@@ -21,8 +28,9 @@ body {
   content: "";
   position: absolute;
   width: 5px;
-  background: #fff;
-  top: 100px;
+  height: 1600px;
+  background: #406882;
+  top: 210px;
   bottom: 0;
   left: 50%;
   margin-left: -2.5px;
@@ -35,9 +43,11 @@ body {
 }
 .container.left {
   left: -10%;
+  
 }
 .container.right {
   left: 50%;
+  /* text-align: right; */
 }
 
 .container::before {
@@ -45,11 +55,12 @@ body {
   position: absolute;
   width: 0;
   height: 0;
+  
   top: 54px;
   right: 40px;
   z-index: 1;
   border: 10px solid;
-  border-color: transparent #ffffff transparent transparent;
+  border-color: transparent #406882 transparent transparent;
 }
 .container::after {
   content: "";
@@ -65,72 +76,114 @@ body {
   z-index: 4;
   border: 4px solid;
   border-radius: 50%;
-  background-color: #00a0ff;
-  border: 5px solid rgb(255, 255, 255);
+  background-color: #D8E3E7;
+  border: 5px solid #1A374D
+  
 }
 .container.right::before {
   left: 40px;
-  border-color: transparent transparent transparent #ffffff;
+  border-color: transparent transparent transparent #406882;
 }
 .container.right::after {
   left: -35px;
 }
 .container .content {
   padding: 1rem;
-  background: #00a0ff;
+  /* opacity: 0.5; */
+  background: #0A1931;
+  /* mix-blend-mode: multiply; */
+  /* mix-blend-mode: screen; */
   position: relative;
-  border: 5px solid #eeeeee;
+  /* border: 5px solid #eeeeee; */
   border-radius: 20px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); */
   display: flex;
   z-index: 5;
   display: flex;
   justify-content: center;
   align-items: center;
   transition: all 0.3s ease;
+  border: 2px solid;
+  border-color: aliceblue;
 }
 .contents {
+  
   display: flex;
+  flex-direction: row;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 /* .container.right .content {
       border-radius: 0 500px 500px 500px;
   } */
 .container .content h2 {
   margin: 10px;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: normal;
-  color: black;
+  color: #D8E3E7;
   font-family: "Rowdies", cursive;
 }
+
 .container .content p {
   margin: 10px;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 22px;
-  color: white;
+  color: #719FB0;
+  font-family: "Rowdies", cursive;
+
+}
+.achievementDevicer{
+  margin: auto;
+  width: 300px;
+  height: 4px;
+  background-color: #868B8E;
+  border-radius: 100px;
+  /* margin: 60px auto 0; */
+  margin-bottom: 50px;
+}
+.devicer {
+  position: relative;
+  /* top: 10px; */
+  left: 10px;
+  width: 10em;
+  display: block;
+  height: 2px;
+  background-color: #868B8E;
+  margin-top: 10px;
+  border-radius: 500px;
+
+  /* margin: 60px auto 0; */
 }
 .image-container {
-  width: 300px;
-  height: 200px;
+  width: 500px;
+  height: 300px; 
+  /* aspect-ratio: 16/9; */
+  background-size: cover;
+  z-index: 100;
+  
 }
 .image {
-  width: 250px;
-  height: 180px;
+  
+  width: 240px;
+  height: 210px;
   border-radius: 20px;
+  background-size: cover;
+  opacity: 0.8;
 }
 .contents {
   display: flex;
+  padding-left: 10px;
+  padding-bottom: 10px;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: ce;
 }
 
 /* .content:hover {
   background: rgb(0, 0, 0);
   border: 5px solid rgb(96, 147, 163);
 } */
-@media (max-width: 768px) {
+@media (max-width: 767.98px) {
   .timeline::after {
     left: 40px;
   }
