--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -12,6 +12,10 @@
       from(rgba(255, 255, 255, 0.1)),
       to(rgba(255, 255, 255, 0.1))
   );
+  /* background-color: #141820; */
+  
+  
+
   /* background: linear-gradient(
     to bottom right,
     rgba(255, 255, 255, 0.1),
