--- a/src/Components/Project-home.css
+++ b/src/Components/Project-home.css
@@ -2,6 +2,12 @@
 
 .outermost-project {
   margin-bottom: 50px;
+  background-color: #141820;
+  position: relative;
+  top:-90px;
+  z-index: 100;
+  padding-top: 30px;
+  height: 850px;
 }
 
 .project-section {
@@ -19,10 +25,40 @@
   height: 7px;
   width: 200px;
   background-color: aliceblue;
+  border-radius: 50px;
   margin: auto;
   margin-bottom: 50px;
   margin-top: 10px;
 }
+
+.lineourproject2 {
+    height: 3px;
+    width: 35%;
+    color: white;
+    z-index: 30000;
+    margin: auto;
+    background-color: azure;
+    text-align: left;
+    margin-left: 0;
+  }
+  
+  .lineourproject1 {
+      height: 3px;
+      width: 35%;
+      color: white;
+      z-index: 30000;
+      margin: auto;
+      background-color: azure;
+      text-align: left;
+      margin-right: 0;
+  }
+
+  .firstrowourproject {
+    z-index: 100;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
 
 .project-container {
   display: flex;
@@ -43,21 +79,21 @@
 }
 .p-container {
   text-align: center;
-  background-color: #0a1931;
+  background-color: #17202e;
   z-index: 2;
   padding: 10px;
   margin: 10px;
   margin: auto;
-  border: 2px solid;
-  width: 30%;
-  border-color: aliceblue;
-  border-radius: 10px;
+  /* border: 2px solid; */
+  width: 28%;
+  /* border-color: aliceblue; */
+  border-radius: 20px;
 }
 
 .projectline {
   height: 2px;
   background-color: white;
-  width: 80%;
+  width: 90%;
   margin: auto;
   text-align: center;
   margin-top: 10px;
@@ -83,9 +119,9 @@
   /* padding-right:10px ; */
   font-size: 0.8rem;
   text-align: center;
-  color: #00a0ff;
+  color: #719fb0;
   font-weight: bold;
-  background-color: #0a1931;
+  background-color: #17202e;
   border: none;
   border-radius: 0.4rem;
   transition: 0.2s;
@@ -103,19 +139,31 @@
 
 .project-heading2 {
   font-size: 1.4rem;
-  color: #719fb0;
-  margin-top: 10px;
+  color: #b2daf1;
+  margin-top: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
+.title1ourproject {
+    font-family: "Rowdies", cursive;
+    font-size: 1.5rem;
+    color: #b2daf1;
+    padding: 10px;
+  }
 
 .project-description {
   color: white;
-  padding: 10px 40px;
+  padding: 10px 20px;
 }
 
 
 
-@media (max-width: 600px) {
-    .project-container {
-      flex-direction: column;
-    }
-  }
+
+.project-image{
+    padding: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 20px;
+    width: 92%;
+    height: fit-content;
+}
