--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&family=Poppins:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Poppins:wght@200&family=Roboto:wght@500&family=Rowdies&display=swap");
 
+
 * {
   margin: 0;
   padding: 0;
@@ -20,9 +21,12 @@ h1 {
   position: sticky;
   background: linear-gradient(to right top, rgb(0, 1, 88), rgb(0, 0, 0));
   transition: 0.5s ease;
+  scroll-behavior: smooth;
 }
 
 /* Landing page */
+
+
 
 .landing-slide {
   display: flex;
@@ -31,6 +35,7 @@ h1 {
   margin-top: 10rem;
   margin-bottom: 13.6rem;
   padding: 0 8rem;
+  
 }
 
 .draic-logo {
@@ -607,6 +612,13 @@ select {
 
 /* Contact */
 
+.contactusouter{
+  background-color: rgba(10, 25, 49, 0.9);
+  position: relative;
+  z-index: 1;
+  top:-5rem;
+  height: 700px;
+}
 .item1 {
   grid-area: header;
 }
@@ -635,10 +647,11 @@ select {
     "submit submit submit submit submit submit";
   grid-gap: 0px;
   padding: 30px;
-  margin: 10rem 0;
-  margin-top: 5rem;
+  margin: 0rem 0;
   width: 100%;
   padding-left: 15rem;
+  padding-top: 100px;
+
 }
 
 input[type="text"],
@@ -680,7 +693,7 @@ select {
 }
 
 .get-in-touch {
-  font-family: "Roboto", sans-serif;
+  font-family: "Rowdies", cursive;
   font-size: larger;
   margin-bottom: 1%;
 }
