--- a/src/Components/Project-home.css
+++ b/src/Components/Project-home.css
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Open+Sans+Condensed:wght@300&family=Poppins:wght@200&family=Roboto:wght@500&family=Rowdies&display=swap");
 
 .outermost-project {
-  margin-bottom: 50px;
-  background-color: #141820;
+  /* margin-bottom: 50px; */
+  /* background-color: #141820; */
+  background-color: rgba(18, 21, 33, 0.9);
+
   position: relative;
-  top:-90px;
+  /* top:-90px; */
   z-index: 100;
   padding-top: 30px;
   height: 850px;
@@ -65,6 +67,12 @@
   text-align: center;
   margin: auto;
   flex-direction: row;
+}
+
+@media (max-width: 800px){
+  .project-container{
+    flex-direction: column;
+  }
 }
 
 .link-active {
