--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -5,16 +5,14 @@
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
-    background: -webkit-gradient(
-      linear,
-      left top,
-      right bottom,
-      from(rgba(255, 255, 255, 0.1)),
-      to(rgba(255, 255, 255, 0.1))
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    from(rgba(255, 255, 255, 0.1)),
+    to(rgba(255, 255, 255, 0.1))
   );
   /* background-color: #141820; */
-  
-  
 
   /* background: linear-gradient(
     to bottom right,
@@ -62,7 +60,9 @@
 .footer_address {
   display: flex;
   justify-content: center;
+  /* flex-start center flex-end */
   align-items: flex-start;
+  /* flex-start center flex-end */
   flex-direction: column;
 }
 .footer_locate {
